[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8" # web 服务器
anyhow = "1" # 错误处理
base64 = "0.22" # base64 编码/解码
bytes = "1" # 处理字节流
image = { version = "0.25", features = ["jpeg"] } # 处理图片
lazy_static = "1" # 通过宏更方便地初始化静态变量
lru = "0.13" # LRU 缓存
percent-encoding = "2" # url 编码/解码
photon-rs = "0.3" # 图片效果
prost = "0.13" # protobuf 处理
reqwest = "0.12" # HTTP client
serde = { version = "1", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1", features = ["full"] } # 异步处理
tower = { version = "0.5", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] } # 服务处理及中间件
tower-http = { version = "0.6", features = [
  "add-extension",
  "compression-full",
  "trace",
] } # http 中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3" # 日志和追踪

[build-dependencies]
prost-build = "0.13" # 编译 protobuf
